<resources>
    <string name="app_name">DreamInMemes</string>
    <string name="return_home">Home</string>
    <string name="end_game">End Game</string>

    <string name="game_init_title_header">GIVE YOUR GAME A TITLE</string>
    <string name="game_init_title_prompt">Enter title:</string>
    <string name="game_init_privacy_header">THIS GAME IS</string>
    <string-array name="game_init_privacy">
        <item>Invite only</item>
        <item>Public</item>
    </string-array>
    <string name="game_init_invite_header">INVITE FRIENDS TO YOUR GAME</string>
    <string name="game_init_invite_prompt">+invite friend</string>
</resources>
